# camoufox-mcp

./: .gitignore  README.md  pyproject.toml
examples/: persistence_test.py  smoke_test.py
src/camoufox_mcp/: __init__.py  __main__.py  server.py
