[project]
name = "camoufox-mcp"
version = "0.1.0"
description = "MCP server exposing Camoufox (anti-fingerprint Firefox fork) as tool calls. Persistent browser sessions, cookie/storage management, JS evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matthew Diakonov" }]
keywords = ["mcp", "camoufox", "browser-automation", "playwright", "anti-detect", "stealth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
  "mcp>=1.2.0",
  "camoufox[geoip]>=0.4.11",
  "playwright>=1.45.0",
]

[project.urls]
Homepage = "https://github.com/m13v/camoufox-mcp"
Repository = "https://github.com/m13v/camoufox-mcp"

[project.scripts]
camoufox-mcp = "camoufox_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camoufox_mcp"]
